80 fix top navigation getting cut off
added margin-top to pages-wrapper in pagination component

--- a/src/styles/pagination.css
+++ b/src/styles/pagination.css
@@ -10,6 +10,7 @@
     align-items: center;
     column-gap: 10px;
     column-gap: 1em;
+    margin-top: 1em;
   }
   
   .page-btn {
